compiler1/y.output
   0  $accept : Program $end

   1  Program :
   2          | MethList

   3  MethList : METH MethList
   4           | METH

   5  METH : TYPE ID '(' Params ')' Body

   6  Params :
   7         | FORMALS TYPE ID

   8  FORMALS : FORMALS TYPE ID ','
   9          |

  10  TYPE : INT

  11  Body : '{' Decls Stmts '}'

  12  Decls : DeclList Decl
  13        |

  14  DeclList : DeclList Decl
  15           |

  16  Decl : TYPE ID Vars ';'
  17       | TYPE ID '=' Expr Vars ';'

  18  Vars : ',' ID Vars
  19       | ',' ID '=' Expr Vars
  20       |

  21  Stmts : Stmts Stmt
  22        |

  23  Stmt : Assign ';'
  24       | RETURN Expr ';'
  25       | IF '(' Expr ')' Stmt ELSE Stmt
  26       | WHILE '(' Expr ')' Stmt
  27       | BREAK ';'
  28       | Block
  29       | ';'

  30  Block : '{' Stmts '}'

  31  Assign : Location '=' Expr

  32  Location : ID

  33  Expr : AddExpr Relop AddExpr
  34       | AddExpr

  35  Relop : LE
  36        | '<'
  37        | '>'
  38        | GE
  39        | EQ
  40        | NE

  41  AddExpr : AddExpr Addop Term
  42          | Term

  43  Addop : '+'
  44        | '-'

  45  Term : Term Mulop Factor
  46       | Factor

  47  Mulop : '*'
  48        | '/'

  49  Factor : '(' Expr ')'
  50         | Location
  51         | DEC_CONST
  52         | METHOD '(' Actuals ')'
  53         | TRUE
  54         | FALSE

  55  METHOD : ID

  56  Actuals : Args Expr
  57          |

  58  Args : Args Expr ','
  59       |

state 0
	$accept : . Program $end  (0)
	Program : .  (1)

	INT  shift 1
	$end  reduce 1

	Program  goto 2
	MethList  goto 3
	METH  goto 4
	TYPE  goto 5


state 1
	TYPE : INT .  (10)

	.  reduce 10


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : MethList .  (2)

	.  reduce 2


state 4
	MethList : METH . MethList  (3)
	MethList : METH .  (4)

	INT  shift 1
	$end  reduce 4

	MethList  goto 6
	METH  goto 4
	TYPE  goto 5


state 5
	METH : TYPE . ID '(' Params ')' Body  (5)

	ID  shift 7
	.  error


state 6
	MethList : METH MethList .  (3)

	.  reduce 3


state 7
	METH : TYPE ID . '(' Params ')' Body  (5)

	'('  shift 8
	.  error


state 8
	METH : TYPE ID '(' . Params ')' Body  (5)
	Params : .  (6)
	FORMALS : .  (9)

	')'  reduce 6
	INT  reduce 9

	Params  goto 9
	FORMALS  goto 10


state 9
	METH : TYPE ID '(' Params . ')' Body  (5)

	')'  shift 11
	.  error


state 10
	Params : FORMALS . TYPE ID  (7)
	FORMALS : FORMALS . TYPE ID ','  (8)

	INT  shift 1
	.  error

	TYPE  goto 12


state 11
	METH : TYPE ID '(' Params ')' . Body  (5)

	'{'  shift 13
	.  error

	Body  goto 14


state 12
	Params : FORMALS TYPE . ID  (7)
	FORMALS : FORMALS TYPE . ID ','  (8)

	ID  shift 15
	.  error


state 13
	Body : '{' . Decls Stmts '}'  (11)
	Decls : .  (13)
	DeclList : .  (15)

	'{'  reduce 13
	'}'  reduce 13
	';'  reduce 13
	IF  reduce 13
	INT  reduce 15
	WHILE  reduce 13
	ID  reduce 13
	RETURN  reduce 13
	BREAK  reduce 13

	Decls  goto 16
	DeclList  goto 17


state 14
	METH : TYPE ID '(' Params ')' Body .  (5)

	.  reduce 5


state 15
	Params : FORMALS TYPE ID .  (7)
	FORMALS : FORMALS TYPE ID . ','  (8)

	','  shift 18
	')'  reduce 7


state 16
	Body : '{' Decls . Stmts '}'  (11)
	Stmts : .  (22)

	.  reduce 22

	Stmts  goto 19


state 17
	Decls : DeclList . Decl  (12)
	DeclList : DeclList . Decl  (14)

	INT  shift 1
	.  error

	TYPE  goto 20
	Decl  goto 21


state 18
	FORMALS : FORMALS TYPE ID ',' .  (8)

	.  reduce 8


state 19
	Body : '{' Decls Stmts . '}'  (11)
	Stmts : Stmts . Stmt  (21)

	'{'  shift 22
	'}'  shift 23
	';'  shift 24
	IF  shift 25
	WHILE  shift 26
	ID  shift 27
	RETURN  shift 28
	BREAK  shift 29
	.  error

	Stmt  goto 30
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 20
	Decl : TYPE . ID Vars ';'  (16)
	Decl : TYPE . ID '=' Expr Vars ';'  (17)

	ID  shift 34
	.  error


state 21
	Decls : DeclList Decl .  (12)
	DeclList : DeclList Decl .  (14)

	'{'  reduce 12
	'}'  reduce 12
	';'  reduce 12
	IF  reduce 12
	INT  reduce 14
	WHILE  reduce 12
	ID  reduce 12
	RETURN  reduce 12
	BREAK  reduce 12


state 22
	Block : '{' . Stmts '}'  (30)
	Stmts : .  (22)

	.  reduce 22

	Stmts  goto 35


state 23
	Body : '{' Decls Stmts '}' .  (11)

	.  reduce 11


state 24
	Stmt : ';' .  (29)

	.  reduce 29


state 25
	Stmt : IF . '(' Expr ')' Stmt ELSE Stmt  (25)

	'('  shift 36
	.  error


state 26
	Stmt : WHILE . '(' Expr ')' Stmt  (26)

	'('  shift 37
	.  error


state 27
	Location : ID .  (32)

	.  reduce 32


state 28
	Stmt : RETURN . Expr ';'  (24)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 43
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 29
	Stmt : BREAK . ';'  (27)

	';'  shift 49
	.  error


state 30
	Stmts : Stmts Stmt .  (21)

	.  reduce 21


state 31
	Stmt : Assign . ';'  (23)

	';'  shift 50
	.  error


state 32
	Stmt : Block .  (28)

	.  reduce 28


state 33
	Assign : Location . '=' Expr  (31)

	'='  shift 51
	.  error


state 34
	Decl : TYPE ID . Vars ';'  (16)
	Decl : TYPE ID . '=' Expr Vars ';'  (17)
	Vars : .  (20)

	','  shift 52
	'='  shift 53
	';'  reduce 20

	Vars  goto 54


state 35
	Stmts : Stmts . Stmt  (21)
	Block : '{' Stmts . '}'  (30)

	'{'  shift 22
	'}'  shift 55
	';'  shift 24
	IF  shift 25
	WHILE  shift 26
	ID  shift 27
	RETURN  shift 28
	BREAK  shift 29
	.  error

	Stmt  goto 30
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 36
	Stmt : IF '(' . Expr ')' Stmt ELSE Stmt  (25)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 56
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 37
	Stmt : WHILE '(' . Expr ')' Stmt  (26)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 57
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 38
	Factor : '(' . Expr ')'  (49)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 58
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 39
	Factor : DEC_CONST .  (51)

	.  reduce 51


state 40
	Location : ID .  (32)
	METHOD : ID .  (55)

	'('  reduce 55
	')'  reduce 32
	';'  reduce 32
	','  reduce 32
	GE  reduce 32
	LE  reduce 32
	EQ  reduce 32
	NE  reduce 32
	'<'  reduce 32
	'>'  reduce 32
	'+'  reduce 32
	'-'  reduce 32
	'*'  reduce 32
	'/'  reduce 32


state 41
	Factor : TRUE .  (53)

	.  reduce 53


state 42
	Factor : FALSE .  (54)

	.  reduce 54


state 43
	Stmt : RETURN Expr . ';'  (24)

	';'  shift 59
	.  error


state 44
	Factor : Location .  (50)

	.  reduce 50


state 45
	Factor : METHOD . '(' Actuals ')'  (52)

	'('  shift 60
	.  error


state 46
	Expr : AddExpr . Relop AddExpr  (33)
	Expr : AddExpr .  (34)
	AddExpr : AddExpr . Addop Term  (41)

	GE  shift 61
	LE  shift 62
	EQ  shift 63
	NE  shift 64
	'<'  shift 65
	'>'  shift 66
	'+'  shift 67
	'-'  shift 68
	')'  reduce 34
	';'  reduce 34
	','  reduce 34

	Relop  goto 69
	Addop  goto 70


state 47
	AddExpr : Term .  (42)
	Term : Term . Mulop Factor  (45)

	'*'  shift 71
	'/'  shift 72
	')'  reduce 42
	';'  reduce 42
	','  reduce 42
	GE  reduce 42
	LE  reduce 42
	EQ  reduce 42
	NE  reduce 42
	'<'  reduce 42
	'>'  reduce 42
	'+'  reduce 42
	'-'  reduce 42

	Mulop  goto 73


state 48
	Term : Factor .  (46)

	.  reduce 46


state 49
	Stmt : BREAK ';' .  (27)

	.  reduce 27


state 50
	Stmt : Assign ';' .  (23)

	.  reduce 23


state 51
	Assign : Location '=' . Expr  (31)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 74
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 52
	Vars : ',' . ID Vars  (18)
	Vars : ',' . ID '=' Expr Vars  (19)

	ID  shift 75
	.  error


state 53
	Decl : TYPE ID '=' . Expr Vars ';'  (17)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 76
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 54
	Decl : TYPE ID Vars . ';'  (16)

	';'  shift 77
	.  error


state 55
	Block : '{' Stmts '}' .  (30)

	.  reduce 30


state 56
	Stmt : IF '(' Expr . ')' Stmt ELSE Stmt  (25)

	')'  shift 78
	.  error


state 57
	Stmt : WHILE '(' Expr . ')' Stmt  (26)

	')'  shift 79
	.  error


state 58
	Factor : '(' Expr . ')'  (49)

	')'  shift 80
	.  error


state 59
	Stmt : RETURN Expr ';' .  (24)

	.  reduce 24


state 60
	Factor : METHOD '(' . Actuals ')'  (52)
	Actuals : .  (57)
	Args : .  (59)

	'('  reduce 59
	')'  reduce 57
	DEC_CONST  reduce 59
	ID  reduce 59
	TRUE  reduce 59
	FALSE  reduce 59

	Actuals  goto 81
	Args  goto 82


state 61
	Relop : GE .  (38)

	.  reduce 38


state 62
	Relop : LE .  (35)

	.  reduce 35


state 63
	Relop : EQ .  (39)

	.  reduce 39


state 64
	Relop : NE .  (40)

	.  reduce 40


state 65
	Relop : '<' .  (36)

	.  reduce 36


state 66
	Relop : '>' .  (37)

	.  reduce 37


state 67
	Addop : '+' .  (43)

	.  reduce 43


state 68
	Addop : '-' .  (44)

	.  reduce 44


state 69
	Expr : AddExpr Relop . AddExpr  (33)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 83
	Term  goto 47
	Factor  goto 48


state 70
	AddExpr : AddExpr Addop . Term  (41)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Location  goto 44
	METHOD  goto 45
	Term  goto 84
	Factor  goto 48


state 71
	Mulop : '*' .  (47)

	.  reduce 47


state 72
	Mulop : '/' .  (48)

	.  reduce 48


state 73
	Term : Term Mulop . Factor  (45)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Location  goto 44
	METHOD  goto 45
	Factor  goto 85


state 74
	Assign : Location '=' Expr .  (31)

	.  reduce 31


state 75
	Vars : ',' ID . Vars  (18)
	Vars : ',' ID . '=' Expr Vars  (19)
	Vars : .  (20)

	','  shift 52
	'='  shift 86
	';'  reduce 20

	Vars  goto 87


state 76
	Decl : TYPE ID '=' Expr . Vars ';'  (17)
	Vars : .  (20)

	','  shift 52
	';'  reduce 20

	Vars  goto 88


state 77
	Decl : TYPE ID Vars ';' .  (16)

	.  reduce 16


state 78
	Stmt : IF '(' Expr ')' . Stmt ELSE Stmt  (25)

	'{'  shift 22
	';'  shift 24
	IF  shift 25
	WHILE  shift 26
	ID  shift 27
	RETURN  shift 28
	BREAK  shift 29
	.  error

	Stmt  goto 89
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 79
	Stmt : WHILE '(' Expr ')' . Stmt  (26)

	'{'  shift 22
	';'  shift 24
	IF  shift 25
	WHILE  shift 26
	ID  shift 27
	RETURN  shift 28
	BREAK  shift 29
	.  error

	Stmt  goto 90
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 80
	Factor : '(' Expr ')' .  (49)

	.  reduce 49


state 81
	Factor : METHOD '(' Actuals . ')'  (52)

	')'  shift 91
	.  error


state 82
	Actuals : Args . Expr  (56)
	Args : Args . Expr ','  (58)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 92
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 83
	Expr : AddExpr Relop AddExpr .  (33)
	AddExpr : AddExpr . Addop Term  (41)

	'+'  shift 67
	'-'  shift 68
	')'  reduce 33
	';'  reduce 33
	','  reduce 33

	Addop  goto 70


state 84
	AddExpr : AddExpr Addop Term .  (41)
	Term : Term . Mulop Factor  (45)

	'*'  shift 71
	'/'  shift 72
	')'  reduce 41
	';'  reduce 41
	','  reduce 41
	GE  reduce 41
	LE  reduce 41
	EQ  reduce 41
	NE  reduce 41
	'<'  reduce 41
	'>'  reduce 41
	'+'  reduce 41
	'-'  reduce 41

	Mulop  goto 73


state 85
	Term : Term Mulop Factor .  (45)

	.  reduce 45


state 86
	Vars : ',' ID '=' . Expr Vars  (19)

	'('  shift 38
	DEC_CONST  shift 39
	ID  shift 40
	TRUE  shift 41
	FALSE  shift 42
	.  error

	Expr  goto 93
	Location  goto 44
	METHOD  goto 45
	AddExpr  goto 46
	Term  goto 47
	Factor  goto 48


state 87
	Vars : ',' ID Vars .  (18)

	.  reduce 18


state 88
	Decl : TYPE ID '=' Expr Vars . ';'  (17)

	';'  shift 94
	.  error


state 89
	Stmt : IF '(' Expr ')' Stmt . ELSE Stmt  (25)

	ELSE  shift 95
	.  error


state 90
	Stmt : WHILE '(' Expr ')' Stmt .  (26)

	.  reduce 26


state 91
	Factor : METHOD '(' Actuals ')' .  (52)

	.  reduce 52


state 92
	Actuals : Args Expr .  (56)
	Args : Args Expr . ','  (58)

	','  shift 96
	')'  reduce 56


state 93
	Vars : ',' ID '=' Expr . Vars  (19)
	Vars : .  (20)

	','  shift 52
	';'  reduce 20

	Vars  goto 97


state 94
	Decl : TYPE ID '=' Expr Vars ';' .  (17)

	.  reduce 17


state 95
	Stmt : IF '(' Expr ')' Stmt ELSE . Stmt  (25)

	'{'  shift 22
	';'  shift 24
	IF  shift 25
	WHILE  shift 26
	ID  shift 27
	RETURN  shift 28
	BREAK  shift 29
	.  error

	Stmt  goto 98
	Assign  goto 31
	Block  goto 32
	Location  goto 33


state 96
	Args : Args Expr ',' .  (58)

	.  reduce 58


state 97
	Vars : ',' ID '=' Expr Vars .  (19)

	.  reduce 19


state 98
	Stmt : IF '(' Expr ')' Stmt ELSE Stmt .  (25)

	.  reduce 25


36 terminals, 27 nonterminals
60 grammar rules, 99 states
